--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jabernal/yii2-pdfjs",
+    "name": "yii2assets/yii2-pdfjs",
     "description": "Yii2 Extension  pdf.js Portable Document Format (PDF) viewer ",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","pdfjs","pdf","PDF Reader"],
@@ -8,10 +8,6 @@
         {
             "name": "Sathit Seethaphon",
             "email": "dixonsatit@gmail.com"
-        },
-        {
-            "name": "Jairo Bernal",
-            "email": "jabernal@gmail.com"
         }
     ],
     "require": {
@@ -19,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "jabernal\\pdfjs\\": ""
+            "yii2assets\\pdfjs\\": ""
         }
     }
 }
